Update links to GitHub readme
Closes #2

--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,8 @@
 				      	<div class='payload-initial-message'>
 				        	TECHNICAL HIGHLIGHTS
 				        	<ul class="base--ul base--ul_no-bullets highlights">
-							  <li class="base--li tech-highlights"><a href="https://github.ibm.com/watson-developer-cloud/text-bot#user-content-intents" class="base--a hyperlink" target="_blank">Best practice on intents naming</a></li>
-							  <li class="base--li tech-highlights"><a href="https://github.ibm.com/watson-developer-cloud/text-bot#user-content-entities" class="base--a hyperlink" target="_blank">Best practice on entity detection</a></li>
+							  <li class="base--li tech-highlights"><a href="https://github.com/watson-developer-cloud/text-bot#user-content-intents" class="base--a hyperlink" target="_blank">Best practice on intents naming</a></li>
+							  <li class="base--li tech-highlights"><a href="https://github.com/watson-developer-cloud/text-bot#user-content-entities" class="base--a hyperlink" target="_blank">Best practice on entity detection</a></li>
 							  <li class="base--li tech-highlights"><a href="https://www.ibm.com/watson/developercloud/doc/conversation/advanced_overview.shtml" class="base--a hyperlink" target="_blank">Best practice on dialog design</a></li>
 							</ul>
 				      	</div>
